linked jquery and javascript files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Simon</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -35,5 +36,7 @@
 
 
 
+<script src = "index.js" async defer></script>
+</body>
 
-</body></html>
+</html>
